--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://sakethskkpai:Nyx3HmAlxE3es8EZ@cluster0.imufw.mongodb.net/products?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
